@@ -1,3 +1,7 @@
+2020-09-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Updated to 'bionic', R 4.0, and BSPM
+
 2020-08-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Depends): Roll Depends: on to R (>= 3.3.0) due to use
